--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" 
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,11 +32,115 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row time-block" id="8">
+        <div class="hour pt-2 col-2 col-md-1">8AM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="9">
+        <div class="hour pt-2 col-2 col-md-1">9AM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="10">
+        <div class="hour pt-2 col-2 col-md-1">10AM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="11">
+        <div class="hour pt-2 col-2 col-md-1">11AM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="12">
+        <div class="hour pt-2 col-2 col-md-1">12PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="13">
+        <div class="hour pt-2 col-2 col-md-1">1PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="14">
+        <div class="hour pt-2 col-2 col-md-1">2PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="15">
+        <div class="hour pt-2 col-2 col-md-1">3PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="16">
+        <div class="hour pt-2 col-2 col-md-1">4PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="17">
+        <div class="hour pt-2 col-2 col-md-1">5PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="18">
+        <div class="hour pt-2 col-2 col-md-1">6PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="19">
+        <div class="hour pt-2 col-2 col-md-1">7PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
+
+      <div class="row time-block" id="20">
+        <div class="hour pt-2 col-2 col-md-1">8PM</div>
+        <textarea class="textarea col-8 col-md-10"></textarea>
+        <Button class="saveBtn col-2 col-md-1">
+            <span class="oi oi-lock-locked text-align-center"></span>
+        </Button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
