--- a/index.html
+++ b/index.html
@@ -31,111 +31,112 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <button class="btn btn-danger clearBtn">Clear Schedule</button>
     </header>
 
     <div class="container">
       <div class="row time-block" id="8">
         <div class="hour pt-2 col-2 col-md-1">8AM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="9">
         <div class="hour pt-2 col-2 col-md-1">9AM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="10">
         <div class="hour pt-2 col-2 col-md-1">10AM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="11">
         <div class="hour pt-2 col-2 col-md-1">11AM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="12">
         <div class="hour pt-2 col-2 col-md-1">12PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="13">
         <div class="hour pt-2 col-2 col-md-1">1PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="14">
         <div class="hour pt-2 col-2 col-md-1">2PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="15">
         <div class="hour pt-2 col-2 col-md-1">3PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="16">
         <div class="hour pt-2 col-2 col-md-1">4PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="17">
         <div class="hour pt-2 col-2 col-md-1">5PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="18">
         <div class="hour pt-2 col-2 col-md-1">6PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="19">
         <div class="hour pt-2 col-2 col-md-1">7PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
 
       <div class="row time-block" id="20">
         <div class="hour pt-2 col-2 col-md-1">8PM</div>
         <textarea class="textarea col-8 col-md-10"></textarea>
-        <Button class="saveBtn col-2 col-md-1">
+        <button class="saveBtn col-2 col-md-1">
             <span class="oi oi-lock-locked text-align-center"></span>
-        </Button>
+        </button>
       </div>
     </div>
 
